Select tools with number keys on a keyboard

--- a/core/res/net/avensome/dev/gnupolpot/core/main.fxml
+++ b/core/res/net/avensome/dev/gnupolpot/core/main.fxml
@@ -24,7 +24,7 @@
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
-            <VBox fx:id="toolPane" spacing="5"/>
+            <VBox fx:id="toolPane" styleClass="tool-pane" spacing="5"/>
         </ScrollPane>
     </left>
     <top>
